--- a/login.html
+++ b/login.html
@@ -265,7 +265,7 @@
                     <label><input type="checkbox"> Remember me</label>
                     <a href="#">Forgot Password?</a>
                 </div>
-                <button type="submit" class="login-btn" onclick="navigateToPage('camerra.html')">Login</button>
+                <button type="submit" class="login-btn" >Login</button>
                 <div class="register-link">
                     <p>Don't have an account? <a href="#">Register</a></p>
                 </div>
@@ -280,5 +280,6 @@
             window.location.href = url; // Navigates within the same window/tab
         }
     </script>
+
 
 </html>
