--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
         <section class="content-row">
             <div class="login-section">
                 <div class="login-box">
-                    <a href="login.html"><img src="complaint-removebg-preview.png" alt="complaint box"></a>
+                    <a href="comp-login.html"><img src="complaint-removebg-preview.png" alt="complaint box"></a>
                     <h1>Complaint Box</h1>
                 </div>
                 <div class="login-box">
@@ -646,4 +646,5 @@
     </script>
 </body>
 </html>
+
 
