--- a/index.html
+++ b/index.html
@@ -577,11 +577,11 @@
                     <h1>Complaint Box</h1>
                 </div>
                 <div class="login-box">
-                    <a href="#"><img src="ministery-removebg-preview.png" alt="Ministry Login"></a>
+                    <a href="login.html"><img src="ministery-removebg-preview.png" alt="Ministry Login"></a>
                     <h1>Ministry Login</h1>
                 </div>
                 <div class="login-box">
-                    <a href="#"><img src="employee-removebg-preview.png" alt="Employee Login"></a>
+                    <a href="login.html"><img src="employee-removebg-preview.png" alt="Employee Login"></a>
                     <h1>Employee Login</h1>
                 </div>
             </div>
@@ -646,5 +646,6 @@
     </script>
 </body>
 </html>
+
 
 
