--- a/login.html
+++ b/login.html
@@ -267,7 +267,7 @@
                 </div>
                 <button type="submit" class="login-btn" >Login</button>
                 <div class="register-link">
-                    <p>Don't have an account? <a href="#">Register</a></p>
+                    <p>Don't have an account? <a href="newRegistration.html">Register</a></p>
                 </div>
             </form>
         </div>
@@ -283,3 +283,4 @@
 
 
 </html>
+
