--- a/index.html
+++ b/index.html
@@ -499,6 +499,9 @@
             <input type="radio" name="option" id="2" onclick="navigateToPage('notices.html')" /> 
             <label for="2"><div class="tab-name">Notices</div></label>
 
+            <input type="radio" name="option" id="7" onclick="navigateToPage('digitalMarketplace.html')" />
+            <label for="7"><div class="tab-name ">Marketplace</div></label>
+
             <input type="radio" name="option" id="3" />
             <label for="3" onclick="navigateToPage('aboutMinistries.html')"><div class="tab-name">Concerned Ministry Id</div></label>
 
@@ -646,6 +649,7 @@
     </script>
 </body>
 </html>
+
 
 
 
