--- a/newRegistration.html
+++ b/newRegistration.html
@@ -349,6 +349,7 @@
             <nav class="navbar-neo">
                 <ul id="nav-links">
                     <li><a href="index.html" class="active"><i class="fa-solid fa-house"></i>Home</a></li>
+                     <li><a href="digitalMarketplace.html" class="active"><i class="fa-solid fa-shop"></i>Marketplace</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="aboutMinistries.html">Concerned Ministries</a></li>
                     <li><a href="dashboard.html">Dashboard</a></li>
@@ -436,4 +437,5 @@
     </script>
 
 </body>
+
 </html>
